--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tree Shop
+          </title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css"
     rel="stylesheet"
